
_____________________________________________________________________________________________________


CFDWARP CHANGELOG

_____________________________________________________________________________________________________


2019 FEB 23a
   * in lib/gridg/2Dbase.c and lib/gridg/3Dbase.c
     - at end of Equation_argum(), added call to SOAP_free_codex_copy() and free(argequation2D.expr)
       to prevent memory leak
   * in lib/soap/soap.c
     - added SOAP_free_codex_copy()
     - in SOAP_process_code(), codex->action_being_processed is now realloced instead of malloced
       to prevent memory leak
   * in src/control.c
     - in readcontrol_actions(), added SOAP_free_codex_copy(&codex_mem); to get rid of memory leaks
     - in read_control(), added calls to SOAP_free_codex and SOAP_free_codex_copy to get rid of 
       memory leaks
   * in src/main.c
     - in main(), added free ( postprocessor ); in various locations prior to exit() to get rid of
       memory leaks
     - in main(), added calls to free_clipped_variables(), SOAP_free_all_vars(), SOAP_free_codex()
       and free( gl.cycle.code_runtime ) prior to exiting to get rid of memory leaks reports


2019 FEB 22b
   * in bin
     - added Taylor-Green.ref
   * in lib/soap/doc/report.tex
     - fixed a LaTeX bug: for_parallel should be for\_parallel


2019 FEB 22a
   * in bin
     - made changes to Titarev-Toro.wrp and to Woodward-Colella_forward_step.wrp


2019 FEB 21b
   * in cycle/share/cycle_share.c
     - added function update_linked_nodes_2() necessary to update the musclvars that are not
       accessed through a dimensionally split stencil (such as the face integration algorithm in
       _MUSCL)
     - in update_linked_nodes(), call update_linked_nodes_2()
     - in update_linked_nodes(), renamed gl->domain to zone.


2019 FEB 21a
   * in cycle/resconv/
     - copied _MUSCL to _MUSCL_test
   * in cycle/resconv/_MUSCL/resconv.c