@@ -7,7 +7,7 @@ Rgas=286.0;
 rhoref=1;
 aref=300;
 
-Mx=7.0;
+Mx=4.0;
 My=0.0;
 P=10200;
 T=300;
@@ -212,7 +212,7 @@ Init(
 
 Disc(
   NavierStokesPerfect(
-    zetaA1=0.02e0;    {conditions the eigenvalue of the A jacobian}
+    zetaA1=0.0e0;    {conditions the eigenvalue of the A jacobian}
     zetaA2=0.01e0;     {conditions eigenvalues so they don't go out of bound; set to 0.1-0.5}
   );
   MUSCL(
@@ -225,7 +225,7 @@ Disc(
     EIGENVALCOND=EIGENVALCOND_PARENT; 
     POSFILTER=POSFILTER_PARENT;
     POSFILTER_numiter=4;
-    FACEINTEG=FACEINTEG_CENTRAL1;
+    FACEINTEG=FACEINTEG_CENTRAL3;
   );
   MUSCLplus(
     FLUX=FLUX_FDSplusFilter;
